--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,20 +1,20 @@
 # load("@io_bazel_rules_go//go:def.bzl", "go_binary")
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 
 go_binary(
     name = "main",
     srcs = ["main.go"],
-    deps = [":greeter"],
+    # deps = [":greeter"],
 )
 
-go_library(
-    name = "greeter",
-    importpath = "github.com/davidswisa/golang-with-bazel/greeter",
-    srcs = ["greeter.go"],
-)
+# go_library(
+#     name = "greeter",
+#     importpath = "github.com/davidswisa/golang-with-bazel/greeter",
+#     srcs = ["greeter.go"],
+# )
 
-go_test(
-    name = "greeter_test",
-    srcs = ["greeter_test.go"],
-    embed = [":greeter"],
-)
+# go_test(
+#     name = "main_test",
+#     srcs = ["main_test.go"],
+#     embed = [":main"],
+# )
