--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -28,6 +28,12 @@ load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies", "go_repository")
 # The first declaration of an external repository "wins".
 ############################################################
 
+go_repository(
+    name = "com_github_gorilla_mux",
+    importpath = "github.com/gorilla/mux",
+    tag = "v1.8.0",
+)
+
 go_rules_dependencies()
 
 go_register_toolchains(version = "1.20.5")
